--- a/imgui-flame-graph/example/CMakeLists.txt
+++ b/imgui-flame-graph/example/CMakeLists.txt
@@ -5,3 +5,16 @@ target_compile_features(imgui-flame-graph-example PRIVATE cxx_constexpr)
 
 add_executable(demo demo.cpp ../imgui/imgui_demo.cpp)
 target_link_libraries(demo PRIVATE ${SDL2_LIBRARIES} ${gl3w_LIBRARIES} ImGui::imgui GL)
+
+
+add_executable(node node.cpp 
+    ../imgui-node-editor/crude_json.cpp
+    ../imgui-node-editor/imgui_canvas.cpp
+    ../imgui-node-editor/imgui_node_editor.cpp
+    ../imgui-node-editor/imgui_node_editor_api.cpp
+)
+target_link_libraries(node PRIVATE ${SDL2_LIBRARIES} ${gl3w_LIBRARIES} ImGui::imgui GL)
+
+
+add_executable(compare compare.cpp )
+target_link_libraries(compare PRIVATE ${SDL2_LIBRARIES} ${gl3w_LIBRARIES} ImGui::imgui GL)
